namespace Setlistbot.Application
{
    public interface IRedditSetlistbot
    {
        Task ReplyToMentions();
    }
}
